--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,15 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "es2021",
     "module": "commonjs",
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "sourceMap": true,
+    "lib": ["es2021"],
+    "rootDir": "src",
+    "outDir": "dist"
   }
 }
