--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "vpn-telegram-bot",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "author": "Pavel Katkov",
+  "main": "dist/app.ts",
+  "scripts": {
+    "build": "tsc",
+    "start": "tsc && node dist/app.js"
+  },
   "devDependencies": {
+    "@types/node": "^17.0.23",
     "prettier": "^2.6.1",
     "typescript": "^4.6.3"
   },
