--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "main": "dist/app.ts",
   "scripts": {
     "build": "tsc",
-    "start": "tsc && node dist/app.js"
+    "start": "tsc && node dist/app.js",
+    "develop": "nodemon src/app.ts"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
