--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "eslint": "^8.12.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "ts-node": "^10.7.0",
@@ -18,5 +21,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.0"
-  }
+  },
+  "keywords": [],
+  "description": ""
 }
