--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "telegraf": "^4.7.0"
   },
   "keywords": [],
   "description": ""
