--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@types/ping": "^0.4.1",
     "dotenv": "^16.0.0",
+    "ping": "^0.4.1",
     "telegraf": "^4.7.0"
   },
   "keywords": [],
