--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8.12.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
+    "standard-version": "^9.3.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
