--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "start:dev": "yarn build:dev && node dist/app.js",
     "start:prod": "yarn build:prod && node dist/app.js",
     "develop:dev": "yarn env:dev && nodemon src/app.ts",
-    "develop:prod": "yarn env:prod && nodemon src/app.ts"
+    "develop:prod": "yarn env:prod && nodemon src/app.ts",
+    "prepare": "husky install",
+    "release": "standard-version",
+    "release:alpha": "standard-version --prerelease alpha",
+    "release:patch": "standard-version --release-as patch",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
@@ -23,7 +29,8 @@
     "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.6.3",
+    "husky": "^7.0.0"
   },
   "dependencies": {
     "@types/ping": "^0.4.1",
