--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "1.0.0",
+  "version": "0.1.1-alpha.2",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
