ci: add bundling and pm2 config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
     "sourceMap": true,
     "lib": ["es2021"],
     "rootDir": ".",
-    "outDir": "dist",
+    "outDir": "dist/js",
     "resolveJsonModule": true
   }
 }
