--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.1-alpha.3",
+  "version": "0.1.1-alpha.4",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
   "scripts": {
     "env:dev": "cp .env.dev .env",
     "env:prod": "cp .env.prod .env",
-    "build:dev": "yarn env:dev && tsc",
-    "build:prod": "yarn env:prod && tsc",
-    "start:dev": "yarn build:dev && node dist/src/app.js",
-    "start:prod": "yarn build:prod && node dist/src/app.js",
+    "compile": "rm -rf dist && tsc",
+    "bundle": "mkdir dist/node && browserify --node --ignore-missing dist/js/src/app.js > dist/node/telegram_bot.js",
+    "build": "yarn compile && yarn bundle",
+    "start:dev": "yarn build && yarn env:dev && node ./dist/node/telegram_bot.js",
     "develop:dev": "yarn env:dev && nodemon src/app.ts",
     "develop:prod": "yarn env:prod && nodemon src/app.ts",
     "prepare": "husky install",
@@ -24,13 +24,14 @@
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
+    "browserify": "^17.0.0",
     "eslint": "^8.12.0",
+    "husky": "^7.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3",
-    "husky": "^7.0.0"
+    "typescript": "^4.6.3"
   },
   "dependencies": {
     "@types/ping": "^0.4.1",
