ci: try github actions attemp 3

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,13 @@ jobs:
         run: yarn --frozen-lockfile
       - run: yarn build
       - run: ls ${{ github.workspace }}/dist/node
+      - name: Install SSH key
+        uses: shimataro/ssh-key-action@v2
+        with:
+         key: ${{ secrets.SSH_KEY }}
+         name: ${{ secrets.VPS_USER }}
+         known_hosts: ${{ secrets.VPS_IP }}
+      - name: rsync over ssh
+        run: scp ${{ github.workspace }}/dist/node/telegram_bot.js '${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/root/telegram-bot'
+
+
