--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,21 +6,21 @@ jobs:
   Build-and-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16.x'
-      - name: Install dependencies
-        run: yarn --frozen-lockfile
-      - run: yarn build
-      - run: ls ${{ github.workspace }}/dist/node
+#      - uses: actions/checkout@v3
+#      - name: Use Node.js
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: '16.x'
+#      - name: Install dependencies
+#        run: yarn --frozen-lockfile
+#      - run: yarn build
+#      - run: ls ${{ github.workspace }}/dist/node
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
          key: ${{ secrets.SSH_KEY }}
          known_hosts: ${{ secrets.VPS_IP }}
-      - name: rsync over ssh
+      - name: SCP over SSH
         run: scp ${{ github.workspace }}/dist/node/telegram_bot.js '${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/root/telegram-bot'
 
 
