--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,15 @@ jobs:
   Build-and-Deploy:
     runs-on: ubuntu-latest
     steps:
-#      - uses: actions/checkout@v3
-#      - name: Use Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '16.x'
-#      - name: Install dependencies
-#        run: yarn --frozen-lockfile
-#      - run: yarn build
-#      - run: ls ${{ github.workspace }}/dist/node
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16.x'
+      - name: Install dependencies
+        run: yarn --frozen-lockfile
+      - run: yarn build
+      - run: ls ${{ github.workspace }}/dist/node
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
