--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,12 +7,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-#      - name: Use Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: '16.x'
       - name: Install dependencies
         run: yarn --frozen-lockfile
+      - name: Build
       - run: yarn build
       - run: ls ${{ github.workspace }}/dist/node
       - name: Install SSH key
@@ -20,7 +17,7 @@ jobs:
         with:
          key: ${{ secrets.SSH_KEY }}
          known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
-      - name: SCP over SSH
+      - name: Deploy
         run: scp ${{ github.workspace }}/dist/node/telegram_bot.js '${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/root/telegram-bot'
 
 
