--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn --frozen-lockfile
+      - uses: actions/checkout@v3ß
       - name: Build
       - run: yarn build
       - run: ls ${{ github.workspace }}/dist/node
