--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,11 +6,10 @@ jobs:
   Build-and-Deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
       - uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn --frozen-lockfile
-      - uses: actions/checkout@v3ß
-      - name: Build
       - run: yarn build
       - run: ls ${{ github.workspace }}/dist/node
       - name: Install SSH key
