--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,14 @@ jobs:
   Build-and-Deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Install dependencies
         run: yarn --frozen-lockfile
       - name: Build
-      - run: yarn build
-      - run: ls ${{ github.workspace }}/dist/node
+        run: yarn build
+      - name: Check bundle
+        run: ls ${{ github.workspace }}/dist/node
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
