--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,21 @@ jobs:
         run: yarn build
       - name: Check bundle
         run: ls ${{ github.workspace }}/dist/node
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          envkey_BOT_URL: ${{ secrets.BOT_URL }}
+          envkey_BOT_SERVER_FOR_PING: ${{ secrets.BOT_SERVER_FOR_PING }}
+          envkey_BOT_ADMIN_ID: ${{ secrets.BOT_ADMIN_ID }}
+          envkey_BOT_SUPPORTED_CHAT_ID: ${{ secrets.BOT_SUPPORTED_CHAT_ID }}
+          envkey_BOT_DEBUG: ${{ secrets.BOT_DEBUG }}
+          envkey_BOT_TEST: 'test data'
+          directory: ${{ github.workspace }}
+          file_name: .env
+          fail_on_empty: false
+      - name: Check .env file
+        run: ls ${{ github.workspace }}
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
@@ -21,5 +36,6 @@ jobs:
           known_hosts: ${{ secrets.SSH_KNOWN_HOSTS }}
       - name: Deploy
         run: scp ${{ github.workspace }}/dist/node/telegram_bot.js '${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/root/telegram-bot'
+        run: scp ${{ github.workspace }}/.env '${{ secrets.VPS_USER }}@${{ secrets.VPS_IP }}:/root/telegram-bot'
 
 
