--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           file_name: .env
           fail_on_empty: false
       - name: Check .env file
-        run: ls ${{ github.workspace }}
+        run: ls ${{ github.workspace }} --all
       - name: Install SSH key
         uses: shimataro/ssh-key-action@v2
         with:
