--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.1-alpha.31",
+  "version": "0.1.1-alpha.32",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
   "scripts": {
     "env:dev": "cp .env.dev .env",
     "env:prod": "cp .env.prod .env",
+    "test": "yarn jest",
     "compile": "rm -rf dist && tsc",
     "bundle": "mkdir dist/node && browserify --node --ignore-missing dist/js/src/app.js > dist/node/telegram_bot.js",
     "build": "yarn compile && yarn bundle",
@@ -22,15 +23,18 @@
     "release:major": "standard-version --release-as major"
   },
   "devDependencies": {
+    "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
     "@typescript-eslint/parser": "^5.16.0",
     "browserify": "^17.0.0",
     "eslint": "^8.12.0",
     "husky": "^7.0.0",
+    "jest": "^27.5.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
+    "ts-jest": "^27.1.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
