--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.1-alpha.33",
+  "version": "0.1.1-alpha.36",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -23,6 +23,8 @@
     "release:major": "standard-version --release-as major"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.23",
     "@typescript-eslint/eslint-plugin": "^5.16.0",
