--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ name: Build and Deploy
 on:
   push:
     branches: [master]
+  workflow_dispatch:
 jobs:
   Build-and-Deploy:
     runs-on: ubuntu-latest
