ci: use name for workflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.2-alpha.8",
+  "version": "0.1.2-alpha.9",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -14,6 +14,7 @@
     "start:dev": "yarn build && yarn env:dev && node ./dist/node/telegram_bot.js",
     "develop:dev": "yarn env:dev && nodemon src/app.ts",
     "gh-secrets-update": "gh secret set --env-file .env.prod",
+    "deploy-env": "yarn gh-secrets-update && gh workflow run 'Build and Deploy'",
     "prepare": "husky install",
     "release": "standard-version",
     "release:alpha": "standard-version --prerelease alpha",
