--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.2-alpha.20",
+  "version": "0.1.2-alpha.21",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "@types/ping": "^0.4.1",
+    "chalk": "^4.1.2",
     "dotenv": "^16.0.0",
     "ping": "^0.4.1",
     "telegraf": "^4.7.0"
