--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.2-alpha.21",
+  "version": "0.1.2-alpha.22",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
   "scripts": {
+    "lint": "tsc --noEmit && eslint .",
     "env:dev": "cp .env.dev .env",
     "env:prod": "cp .env.prod .env",
     "test": "yarn jest",
@@ -31,6 +32,7 @@
     "@typescript-eslint/parser": "^5.18.0",
     "browserify": "^17.0.0",
     "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "nodemon": "^2.0.15",
