--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.1.3-alpha.2",
+  "version": "0.1.3-alpha.3",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -45,6 +45,7 @@
   "dependencies": {
     "@types/ping": "^0.4.1",
     "chalk": "^4.1.2",
+    "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
     "ping": "^0.4.1",
     "telegraf": "^4.7.0"
