--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.2.1-alpha.3",
+  "version": "0.2.1-alpha.4",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -35,6 +35,7 @@
     "eslint-config-prettier": "^8.5.0",
     "husky": "^7.0.0",
     "jest": "^27.5.1",
+    "memfs": "^3.4.1",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
     "standard-version": "^9.3.2",
