ci: ignore spec.ts and node_modules during building

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,6 @@
     "rootDir": ".",
     "outDir": "dist/js",
     "resolveJsonModule": true
-  }
+  },
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
