--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vpn-telegram-bot",
-  "version": "0.7.1-alpha.3",
+  "version": "0.8.1-alpha.0",
   "license": "MIT",
   "author": "Pavel Katkov",
   "main": "dist/app.ts",
@@ -48,6 +48,7 @@
     "chalk": "^4.1.2",
     "dayjs": "^1.11.1",
     "dotenv": "^16.0.0",
+    "ip-num": "^1.5.1",
     "telegraf": "^4.8.1"
   },
   "keywords": [],
